--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,22 @@
 # datasource
 spring.datasource.url=jdbc:postgresql://localhost:5432/transacao
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.username=keycloak
+spring.datasource.password=password
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-#jpa
+# jpa
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# kafka
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.group-id=transacao
+spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.topic.transactions=transacoes
+
