security with OAuth2

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,3 +7,7 @@ spring.datasource.password=${DATABASE_PASS}
 spring.kafka.bootstrap-servers=${KAFKA_HOST}
 spring.kafka.consumer.group-id=${KAFKA_CONSUMER_GROUP_ID}
 spring.kafka.consumer.auto-offset-reset=${KAFKA_AUTO-OFFSET-RESET}
+
+# oauth2
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWK_URI}
