--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.kafka.consumer.group-id=transacao
 spring.kafka.consumer.auto-offset-reset=latest
 spring.kafka.topic.transactions=transacoes
 
+# oauth2
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:18080/auth/realms/transactions
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:18080/auth/realms/transactions/protocol/openid-connect/certs
+
